kubernetes/localmovies/templates/keycloak-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:  
  - name: https
    port: 8446
    targetPort: 8446
