kubernetes/localmovies/templates/kong-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: kong
spec:
  type: NodePort
  selector:
    app: kong
  ports:  
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30039
    protocol: TCP
