kubernetes/localmovies/templates/localmovie-web-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: localmovie-web
spec:
  type: ClusterIP
  selector:
    app: localmovie-web
  ports:  
  - name: https
    port: 8450
    targetPort: 8450
