kubernetes/localmovies/templates/localmovie-webapp-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: localmovies-webapp
spec:
  type: ClusterIP
  selector:
    app: localmovies-webapp
  ports:  
  - name: https
    port: 8443
    targetPort: 8443
