kubernetes/localmovies/templates/localmovies-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: localmovies
spec:
  type: ClusterIP
  selector:
    app: localmovies
  ports:  
  - name: http
    port: 8080
