kubernetes/localmovies/templates/ingress.yml
# Using this together with nginx-ingress installed as described here - https://kubernetes.github.io/ingress-nginx/deploy/#generic-deployment

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: localmovies-ingress
  annotations:
      kubernetes.io/tls-acme: 'true'
      ingress.kubernetes.io/ssl-redirect: "true"
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/enable-modsecurity: "true"
      nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
      nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  rules:
  - host: movies.nathanrahm.com
    http:
      paths:
       - path: /
         backend:
          serviceName: localmovies
          servicePort: http
  tls:
  - hosts:
    - movies.nathanrahm.com
    secretName: localmovies-tls
